--- a/SHCode/Podfile
+++ b/SHCode/Podfile
@@ -4,5 +4,5 @@ pod 'MJExtension', '~> 3.0.10'
 pod 'SDWebImage', '~> 3.7.5'
 pod 'SVProgressHUD', '~> 2.0-beta8'
 pod 'MJRefresh'
-
+pod 'Masonry'
 end
